# video-player

./: AGENTS.md  README.md  audio_check.py  helpers.py  main.py  main_menu_bar.py  media_controller.py  pyproject.toml  setting_keys.py  settings_manager.py  theme.py  video-player.desktop  video_controls.py  video_display.py
src/: main.py  main_menu_bar.py  media_controller.py  mpris_interface.py  shortcut_manager.py  theme.py  video_controls.py  video_display.py
src/primitive/: graphics_outlined_text_item.py  slider.py
src/settings/: setting_keys.py  settings_manager.py
src/subtitle/: subtitle.py  subtitle_entry.py  subtitle_graphics_item.py  subtitle_loader.py  subtitle_parser.py
src/utils/: audio_check.py  helpers.py  math.py
src/widgets/: main_layout.py  main_menu_bar.py  video_controls.py  video_display.py
src/window/: about_window.py  application_window.py  settings_window.py
subtitle/: subtitle.py  subtitle_entry.py  subtitle_graphics_item.py  subtitle_loader.py  subtitle_parser.py
window/: application_window.py  settings_window.py
