[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "untitled-video-player"
version = "2026.0.0a1"
readme = "README.md"
dependencies = [
    "PySide6",
]

[project.scripts]
untitled-video-player = "main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
